--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     networks:
         - app_tier
     volumes:
-        - ./mysql/db:/var/lib/mysql
+        - /var/lib/mysql
     ports:
         - "3306:3306"
     cap_add:
@@ -33,8 +33,7 @@ services:
 
   back:
     build:
-      context: .
-      dockerfile: ./back/Dockerfile
+      context: ./back
     ports:
       - "5000:5000"
     container_name: back
@@ -48,6 +47,20 @@ services:
     volumes:
        - ./back/web:/app        
     command: gunicorn -w 1 -b 0.0.0.0:5000 app:app
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "8000:8000"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - front
+      - back
+    networks: 
+      - app_tier
+    restart: "on-failure"
 
 networks:  # 네트워크 이름 
   app_tier:
