requirement.txt 복사 오류 문제 해결

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -13,7 +13,7 @@ ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
 # requirements.txt 복사 
-COPY ./back/requirements.txt requirements.txt
+COPY requirements.txt requirements.txt
 # 필요한 패키지 설치 
 RUN pip3 install -r requirements.txt 
 
