--- a/backend/web/glowtts-v2/config.json
+++ b/backend/web/glowtts-v2/config.json
@@ -19,7 +19,7 @@
     "num_loader_workers": 0,
     "num_val_loader_workers": 0,
     "use_noise_augment": true,
-    "output_path": "/content/TTS/glowtts-v2",
+    "output_path": "/app/glowtts-v2",
     "distributed_backend": "nccl",
     "distributed_url": "tcp://localhost:54321",
     "audio": {
@@ -47,7 +47,7 @@
         "symmetric_norm": true,
         "max_norm": 4.0,
         "clip_norm": true,
-        "stats_path": "/content/TTS/glowtts-v2/scale_stats.npy"
+        "stats_path": "/app/glowtts-v2/scale_stats.npy"
     },
     "use_phonemes": false,
     "phoneme_language": "ko",
