--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@types/styled-components": "^5.1.11",
+    "@zeit/next-sass": "^1.0.1",
     "babel-plugin-styled-components": "^1.13.2",
     "next": "11.0.1",
     "next-redux-wrapper": "^7.0.2",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
