--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.11",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
     "next": "11.0.1",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.2",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
