--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,15 @@ FROM node:10
 
 WORKDIR /usr/src/app/frontend 
 
+# `/app/node_modules/.bin`을 $PATH 에 추가
+ENV PATH /app/node_modules/.bin:$PATH
+
 COPY package*.json ./
 
-RUN npm install
+RUN npm i
+
+# RUN npm run build
+# RUN npm run dev
 
 EXPOSE 3000
 
