--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.5'
 services:
 
   frontend:
@@ -18,6 +18,7 @@ services:
   backend:
     build:
       context: ./backend
+      shm_size: '16gb'
     ports:
       - "5000:5000"
     container_name: backend
