fix : nginx 오류 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,13 +9,13 @@ http {
     include       /etc/nginx/mime.types;
     default_type  text/html;
 
-    upstream docker-front {
-        server front:3000;
+    upstream docker-frontend {
+        server frontend:3000;
     }
 
-    upstream docker-back {
+    upstream docker-backend {
         ip_hash;
-        server back:5000;
+        server backend:5000;
     }
 
     server {
@@ -23,7 +23,7 @@ http {
         server_name localhost;
      
         location / {
-            proxy_pass         http://docker-front;
+            proxy_pass         http://docker-frontend;
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarder-For $proxy_add_x_forwarded_for;
@@ -37,7 +37,7 @@ http {
         server_name localhost;
      
         location / {
-            proxy_pass         http://docker-back;  
+            proxy_pass         http://docker-backend;  
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarder-For $proxy_add_x_forwarded_for;
