--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
+    "file-loader": "^6.2.0",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
     "next": "11.0.1",
@@ -26,6 +27,7 @@
     "react-redux": "^7.2.4",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
+    "sass": "^1.35.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/react-redux": "^7.1.18",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
     "typescript": "^4.3.5"
   }
 }
