--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,15 @@
     "next": "11.0.1",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.2",
-    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
+    "react-select": "^4.3.1",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.35.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@types/node": "^16.3.3",
@@ -37,6 +38,8 @@
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.1",
+    "react-h5-audio-player": "^3.7.1",
     "typescript": "^4.3.5"
   }
 }
