--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.13.2",
+    "classnames": "^2.3.1",
     "file-loader": "^6.2.0",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
     "next": "11.0.1",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
     "react-select": "^4.3.1",
