fix: modify Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -37,9 +37,9 @@ RUN pip3 install -q --no-cache-dir "konlpy" "jamo" "nltk" "python-mecab-ko"
 RUN pip3 install -q --no-cache-dir -e .
 
 WORKDIR /app/TTS
-RUN git config --global user.email "syoung622@naver.com"
-RUN git config --global user.name "syoung622"
-RUN git subtree add --prefix=TTS_sub https://github.com/syoung622/TTS.git syoung622-TTS
+#RUN git config --global user.email "syoung622@naver.com"
+#RUN git config --global user.name "syoung622"
+#RUN git subtree add --prefix=TTS_sub https://github.com/syoung622/TTS.git syoung622-TTS
 
 RUN pip3 install TTS
 RUN pip3 install -q --no-cache-dir -e .
