--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "backend/web/TTS"]
 	path = backend/web/TTS
 	url = https://github.com/thfla1105/TTS.git
+[submodule "TTS"]
+	path = TTS
+	url = https://github.com/thfla1105/TTS.git
