--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
     "react-select": "^4.3.1",
     "redux-actions": "^2.6.5",
