--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,48 @@
 version: '3.5'
 services:
-
   frontend:
     build:
       context: ./frontend
     ports:
-      - "3000:3000"
+      - '3000:3000'
     container_name: frontend
-    stdin_open: true 
+    stdin_open: true
     restart: always
     networks:
-        - app_tier
+      - app_tier
     volumes:
-       - ./frontend:/usr/src/app/frontend
-       - /usr/src/app/frontend/node_modules
+      - ./frontend:/usr/src/app/frontend
+      #  - /usr/src/app/frontend/node_modules
+      - /usr/src/app/frontend/.next
 
   backend:
     build:
       context: ./backend
       shm_size: '16gb'
     ports:
-      - "5000:5000"
+      - '5000:5000'
     container_name: backend
-    restart: always 
+    restart: always
     networks:
-        - app_tier
+      - app_tier
     volumes:
-       - ./backend/web:/app        
+      - ./backend/web:/app
     command: gunicorn -w 1 -b 0.0.0.0:5000 --timeout=300 run:app
 
   nginx:
     image: nginx:latest
     ports:
-      - "80:80"
-      - "8000:8000"
+      - '80:80'
+      - '8000:8000'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - frontend
       - backend
-    networks: 
+    networks:
       - app_tier
-    restart: "on-failure"
+    restart: 'on-failure'
 
-networks:  # 네트워크 이름 
+networks: # 네트워크 이름
   app_tier:
-    driver: bridge  # 컨테이너를 bridge로 연결 
+    driver: bridge # 컨테이너를 bridge로 연결
